--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -30,6 +31,7 @@ dependencies {
 
     //########### ROOM DATABASE ORM ##########
     implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation "android.arch.persistence.room:rxjava2:1.1.1"
 
@@ -64,6 +66,7 @@ dependencies {
     /*############################ CircleImageView ##################################*/
     implementation 'de.hdodenhof:circleimageview:3.0.1'
 
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
