--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/marvellogo"
+        android:label="Marvel"
+        android:roundIcon="@drawable/marvellogo"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity android:name=".view.activity.QuadrinhoDetalheActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
